# labs_oop

./: README.md  main.cpp
include/: Hexagon.h  HexagonValidationHandler.h
lab1/: CMakeLists.txt  main.cpp  readme.md
lab1/include/: execute.h
lab1/src/: tobin.cpp
lab1/test/: test.cpp
lab2/: CMakeLists.txt  README.md
lab3/: CMakeLists.txt  README.md
lab3/include/: Hexagon.h  HexagonValidationHandler.h  ValidationCompositor.h
lab3/src/: Hexagon.cpp  HexagonValidationHandler.cpp  PentagonValidationHandler.cpp  ValidationCompositor.cpp
lab3/test/: test.cpp
lab4/src/: Hexagon.cpp
lab5/: CMakeLists.txt  main.cpp
lab5/include/: Vector2.h
lab5/src/: Aloctr.cpp  Vector2.cpp
lab5/test/: test.cpp
lab6/: CMakeLists.txt  main.cpp
lab7/: main.cpp
